// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transactions List > should render the \`TransactionsList\` component in "compact" mode 1`] = `
<dl
  class="detail-list"
>
  <dt
    class="details-list__term details-list__term--table"
  >
     
    ID
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <a
      class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
      href="/some-base-path/transactions/transaction?id=4877687c2dbf154248d3ddee9ba0d81e3431f39056f82a46819da041d4ac0e04"
    >
      4877687c2dbf154248d3ddee9ba0d8...31f39056f82a46819da041d4ac0e04
    </a>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    relative time
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <time
      class="dusk-relative-time transaction-details__list-timestamp"
      datetime="2024-04-16T06:39:09.000Z"
      slot="definition"
    >
      last month
    </time>
  </dd>
   
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Fee
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    0.000290766
     DUSK
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Status
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-success transaction-status explorer-badge"
    >
      success
    </span>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Type
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <div
      class="transaction-type"
    >
      <svg
        class="dusk-icon dusk-icon--size--large transaction-type__icon"
        data-tooltip-disabled="true"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="Moonlight"
        data-tooltip-type="info"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,7C13.4,7 14.8,8.1 14.8,9.5V11C15.4,11 16,11.6 16,12.3V15.8C16,16.4 15.4,17 14.7,17H9.2C8.6,17 8,16.4 8,15.7V12.2C8,11.6 8.6,11 9.2,11V9.5C9.2,8.1 10.6,7 12,7M12,8.2C11.2,8.2 10.5,8.7 10.5,9.5V11H13.5V9.5C13.5,8.7 12.8,8.2 12,8.2Z"
        />
      </svg>
      
       
      <span
        class="dusk-badge dusk-badge--variant-neutral"
      >
        transfer
      </span>
    </div>
    
  </dd>
</dl>
`;

exports[`Transactions List > should render the \`TransactionsList\` component in "full" mode 1`] = `
<dl
  class="detail-list"
>
  <dt
    class="details-list__term details-list__term--table"
  >
     
    ID
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <a
      class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
      href="/some-base-path/transactions/transaction?id=4877687c2dbf154248d3ddee9ba0d81e3431f39056f82a46819da041d4ac0e04"
    >
      4877687c2dbf154248d3ddee9ba0d8...31f39056f82a46819da041d4ac0e04
    </a>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    relative time
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <time
      class="dusk-relative-time transaction-details__list-timestamp"
      datetime="2024-04-16T06:39:09.000Z"
      slot="definition"
    >
      last month
    </time>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Gas Price
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    1
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Gas Limit
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    500,000,000
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Fee
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    0.000290766
     DUSK
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Status
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-success transaction-status explorer-badge"
    >
      success
    </span>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
     
    Type
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <div
      class="transaction-type"
    >
      <svg
        class="dusk-icon dusk-icon--size--large transaction-type__icon"
        data-tooltip-disabled="true"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="Moonlight"
        data-tooltip-type="info"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,7C13.4,7 14.8,8.1 14.8,9.5V11C15.4,11 16,11.6 16,12.3V15.8C16,16.4 15.4,17 14.7,17H9.2C8.6,17 8,16.4 8,15.7V12.2C8,11.6 8.6,11 9.2,11V9.5C9.2,8.1 10.6,7 12,7M12,8.2C11.2,8.2 10.5,8.7 10.5,9.5V11H13.5V9.5C13.5,8.7 12.8,8.2 12,8.2Z"
        />
      </svg>
      
       
      <span
        class="dusk-badge dusk-badge--variant-neutral"
      >
        transfer
      </span>
    </div>
    
  </dd>
</dl>
`;
